# REST_API

./: .gitignore  README.md  env_example.txt  main.py  pyproject.toml
.github/workflows/: ci-tests.yml  k8s-tests.yml
ci/: Dockerfile  ci-test-pod.yaml  ci_test_pod.yaml  mockapi_test_pod.yaml  run_docker_tests.sh  run_k8s_tests.sh  run_tests.sh
core/: normalizers.py  test_contract.py  validators.py
mockapi_client/: async_client.py  async_decorators.py  client.py  config.py  decorators.py  factory.py  logger.py
rest_api_1/: client.py  decorators.py  factory.py
tests/: conftest.py  test_contract.py  test_scenario.py  test_user_async_burst_create.py  test_user_async_burst_workflow.py  test_user_async_contract.py  test_user_async_edge_single.py  test_user_async_edge_workflow.py  test_user_concurrency_threads.py  test_user_concurrent_async_conflict.py  test_user_concurrent_async_creation.py  test_user_contract.py  test_user_negative.py  test_user_scenario.py
