[project]
name = "mockapi-users-client"
version = "1.0.0"
description = "Production-style REST API client for MockAPI"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Stanislav Dmytrenko", email = "stas1235@gmail.com" }
]
license = { text = "MIT" }

dependencies = [
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "colorlog>=6.8.0",
]

[project.urls]
Repository = "https://github.com/StasDee/REST_API"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["mockapi_client"]
