import sys
from pathlib import Path

sys.path.append(str(Path(__file__).parent.parent))


[project]
name = "mockapi-users-client"
version = "1.0.0"
description = "Production-style REST API client for MockAPI"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Stanislav Dmytrenko", email = "stas1235@gmail.com" }
]
license = { text = "MIT" }

dependencies = [
    "requests>=2.31.0",
    "colorlog>=6.8.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.25.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-xdist>=3.0",
]

[project.urls]
Repository = "https://github.com/StasDee/ResilientAPI"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["mockapi_client"]


[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -s -v --log-cli-level=DEBUG"
testpaths = ["tests"]
markers = [
    "contract: mark a test as a contract test",
    "scenario: mark a test as a scenario test"
]
